Replace List.getFirst() with .get(0) in tests for Java 17 compatibility
Upstream uses List.getFirst() (JEP 431, sequenced collections, Java 21+) in
FruitControllerTests in both quarkus-jvm and quarkus-virtual modules. This
prevents the test code from compiling under Java 17/19/20.

For cross-version benchmarking we need the full source — including tests —
to build under every Java version we want to compare. Replaced the call
with the API-equivalent .get(0) and added an in-source comment pointing
to upstream.yml. Recorded the file pair under intentional_divergences in
upstream.yml so CheckUpstreamDivergence.java will not flag the change.

The substitution is inside test code only — does not affect the production
artifact or any benchmark measurements.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>